# newst_dog_sdk_v2_8_0

./: README.md
button_led_control/: CMakeLists.txt  prj.conf
button_led_control/src/: main.c  main_shell.c
c_modules/imu/src/: imu.c
c_modules/json/src/: d1_json.c
c_modules/pmic/src/: pmic.c  pmic_shell.c
commercial_collar/: CMakeLists.txt  Makefile  nrf54l15_nrf54l15.overlay  prj.basic.conf  prj.conf
commercial_collar/src/: pm_shell.c
commercial_collar/src/ble/src/: tracker_service.c
commercial_collar/src/comm_mgr/src/: commMgr.c
commercial_collar/src/wifi/src/: wifi_shell.c  wifi_spi.c
dog_tracker/: CMakeLists.txt  prj.conf
dog_tracker/boards/: nrf54l15dk_nrf54l15_cpuapp.overlay
dog_tracker/c_modules/modem/src/: modem_spi.c
dog_tracker/include/: app_version.h  ble.h  tracker_service.h  uicr.h
dog_tracker/src/: main.c
dog_tracker/src/ble/: ble.c  tracker_service.c
dog_tracker/src/utils/: uicr.c
nrf54l15_bluetooth_app/: CMakeLists.txt  prj.conf
nrf54l15_bluetooth_app/board/: nrf54l15dk_nrf54l15_cpuapp.overlay
nrf54l15_bluetooth_app/src/: main.c
zephyr/tests/bluetooth/qualification/: ICS_Zephyr_Bluetooth_Host.pts
